--- a/config.env
+++ b/config.env
@@ -1,4 +1,2 @@
-POSTGRES_USER=walletdb
-POSTGRES_PASSWORD=wallet
-POSTGRES_DB=walletdb
-POSTGRES_PORT=5432
+# NO PROD
+DSN_POSTGRES=postgres://walletdb:wallet@wallet-db:5432/walletdb?sslmode=disable
