--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.9"
 
 services:
-  wallet-service:
-    image: postgres:latest
+  wallet-db:
+    image: postgres:18
     container_name: postgres
     env_file:
-      - config.env
+      - .env
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - postgres_data:/var/lib/postgresql/models
+      - postgres_data:/var/lib/postgresql
     networks:
       - mynetwork
     ports:
